# Chessboard

./: CMakeLists.txt  CMakeSettings.json  README.md
Chessboard/: CMakeLists.txt  Chessboard.cpp  Chessboard.h  GPIODevice.cpp  GPIODevice.h  MFRC522.cpp  MFRC522.h  Main.cpp  SPIDevice.cpp  SPIDevice.h  Timer.cpp  Timer.h
